# forum

./: design.md
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/entity/: Cargo.toml
backend/entity/src/: forum.rs  lib.rs  post.rs  prelude.rs  thread.rs
backend/entity/src/raw/: post.rs  thread.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240505_000000_create_tables.rs  m20240513_005933_default_date.rs
backend/migration/src/m20240505_000000_create_tables/entity/: mod.rs  post.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs  services.rs
backend/templates/: Cargo.toml
backend/templates/src/: lib.rs
backend/templates/templates/: index.html  main.html  new-forum.html  post.html  thread.html
