[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.82"
sea-orm = "0.12.15"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time"] }

entity = { path = "../entity" }
migration = { version = "0.1.0", path = "../migration" }
templates = { version = "0.0.0", path = "../templates" }
dotenvy = "0.15.7"
serde = { version = "1.0.200", features = ["derive"] }
rand = "0.8.5"
